--- a/requirements.txt
+++ b/requirements.txt
@@ -38,16 +38,21 @@ openai==1.79.0
 orjson==3.10.18
 ormsgpack==1.9.1
 packaging==24.2
+pandas==2.2.3
 primp==0.15.0
 propcache==0.3.1
 pydantic==2.11.4
 pydantic-core==2.33.2
 pydantic-settings==2.9.1
+pymysql==1.1.1
+python-dateutil==2.9.0.post0
 python-dotenv==1.1.0
+pytz==2025.2
 pyyaml==6.0.2
 regex==2024.11.6
 requests==2.32.3
 requests-toolbelt==1.0.0
+six==1.17.0
 slack-bolt==1.23.0
 slack-sdk==3.35.0
 sniffio==1.3.1
@@ -58,6 +63,7 @@ tqdm==4.67.1
 typing-extensions==4.13.2
 typing-inspect==0.9.0
 typing-inspection==0.4.0
+tzdata==2025.2
 urllib3==2.4.0
 xxhash==3.5.0
 yarl==1.20.0
